--- a/loading.html
+++ b/loading.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Loading</title>
+	<title>Loading BoardGameGeek…</title>
 	<style>
 		body {
 			background: #e7ecf1;
